force-app/main/default/objects/Support__c/Support__c.object-meta.xml
<CustomObject>
    <label>Support</label>
    <nameField>
        <displayFormat>SUP-{000000}</displayFormat>
        <label>Support Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>