force-app/main/default/objects/Support__c/validationRules/Subject_Validation_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Subject_Validation_Rules</fullName>
    <active>false</active>
    <description>Subject field cannot be empty.</description>
    <errorConditionFormula>(ISBLANK( Subject__c ))</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>Please Enter The Subject.</errorMessage>
</ValidationRule>