force-app/main/default/objects/Support__c/validationRules/Type_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Validation_Rule</fullName>
    <active>false</active>
    <description>Type field cannot be empty.</description>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Please Select Type.</errorMessage>
</ValidationRule>