force-app/main/default/objects/Support__c/listViews/Other_Support.listView-meta.xml
<ListView>
    <fullName>Other_Support</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Others</value>
    </filters>
    <label>Other Support</label>
    <language>en_US</language>
</ListView>