force-app/main/default/objects/Support__c/listViews/Other_Supports.listView-meta.xml
<ListView>
    <fullName>Other_Supports</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Description__c</columns>
    <columns>Subject__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>Other Support</label>
</ListView>